--- a/theme/static/css/julia.css
+++ b/theme/static/css/julia.css
@@ -1,3 +1,4 @@
+
 /* julia.css v1.0 */
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
@@ -5,7 +6,7 @@
 
 body {
 	color:#444;
-	background: #B8BAC3;
+	background: #C2D0C2;
 	font-family: "Source Sans Pro", sans-serif;
 	font-size:1rem;
 	line-height: 1.4;
@@ -244,78 +245,66 @@ cite, code, tt {
 
 /* Homepage */
 
-.home-blurb {
+.home-intro {
 	display: flex;
-	align-items: center;
-	padding:0rem 0rem;
+	align-content: center;
 }
-.home-blurb .desc {
+.home-detail {
+
+}
+.home-blurb {
 	font-size: 1.1rem;
-	line-height: 1.5;
+	line-height: 1.5;	
 }
-.home-blurb .sponsor {
+.home-intro .sponsor {
 	list-style: none;
 	padding:0;
 	flex-shrink: 0;
 	margin:0 60px 0 4rem;
 	text-align: center;
 }
-.home-blurb .sponsor li {
+.home-intro .sponsor li {
 	display: block;
 	margin:1rem 0;
 	padding:0;
 }
-
-.home-versions {
+.web-version {
+	display:inline-block;
 	padding: 2rem 0rem;
 }
-.home-versions ul {
-	list-style: none;
-	padding:0;
-	margin:0 0;
-	display: flex;
-	justify-content: space-between;
-}
-.home-versions li {
-	padding:0;
-	margin:1rem 1rem;
-}
-.home-versions li a {
+.web-version a {
 	display: block;
 	color: #23262c;
-	border:1px solid #ddd;
+	border:1px solid #23262c;
 	border-radius: 5px;
 	padding:1rem 40px 1rem 120px;
 	position: relative;
 }
-.home-versions li:first-child a {
-	border-color: #23262c;
-}
-.home-versions li a:hover {
+.web-version a:hover {
 	border-color: #23262c;
 	text-decoration: none;
 	background:#23262c;
 	color:#fff;
 }
-.home-versions li a:hover svg {
-	color: #fff;
-}
-.home-versions li a:hover p {
+.web-version a:hover p {
 	color: #eee;
 }
-.home-versions li a svg {
+.web-version a .thumb {
 	position: absolute;
 	left:40px;
 	top:1rem;
 	font-size:3.5rem;
 	color: #23262c;
 }
-.home-versions li a h3 {
+.web-version a .thumb img {
+	width:50px;
+}
+.web-version a h2 {
 	line-height: 1;
 	margin:0;
 	font-size: 1.4rem;
 }
-.home-versions li a p {
+.web-version a p {
 	margin:10px 0 0 0;
 	color: #444;
 }
@@ -668,22 +657,21 @@ span.MathJax {font-size:0.92rem;}
 }
 
 @media only screen and (max-width: 768px) {
-	.header, .footer, .content, .home-blurb, .home-versions, .home-alternatives {
+	.header, .footer, .content, .home-alternatives {
 		padding-left: 2.5rem;
 		padding-right: 2.5rem;
 	}
 	.header-tools {
 		display: none;
 	}
-	.home-blurb {
+	.home-intro {
 		display: block;
-		padding:0 0;
 	}
-	.home-versions {
-		padding: 2rem 0;
+	.home-intro .sponsor {
+		margin:0 auto;
 	}
-	.home-versions ul {
-		display: block;
+	.web-version {
+		display:block;
 	}
 	.home-alternatives {
 		padding: 2rem 0;
